# neu-backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  configuration.yaml  docker-compose.yml  spec.yaml  spec.yml  sqlx-data.json  temp-db.json
.github/workflows/: general.yml
.sqlx/: query-d14b07706d307165ae755ce9266669209fa8e8b49ba70fe71936f91c2cfb9898.json
configuration/: base.yaml  base.yml  local.yaml  production.yaml
migrations/: 20230614143728_create_users_table.sql  20230614144053_create_userrrr_table.sql  20230628101553_customers_table.sql  20230629114224_merchants_table.sql  20230629114405_users_table.sql  20230629114645_settings_table.sql  20230629115124_merchants_settings_profile.sql  20230629115357_merchants_services_profile.sql  20230629140504_alter_customers_table.sql  20230719125635_kyc_table.sql  20230719125645_businesses_table.sql  20230719125653_services_table.sql  20230719125708_merchant_business_profile.sql  20230719125723_customers_app_settings.sql  20230719130043_identification_types_table.sql  20230719131517_payment_details_table.sql  20230719141929_alter_merchant_buisness_profile.sql
scripts/: init_db.sh
src/: config.rs  controller.rs  db.rs  error.rs  lib.rs  main.rs  models.rs
src/authentication/: jwt_auth.rs  middleware.rs
src/helpers/: auth_basic.rs  mod.rs  parser.rs  pass_helpers.rs
src/routes/: auth.rs  handler.rs  health_check.rs  home_page.rs  login.rs  merchant.rs  mod.rs  sign_up.rs
tests/: health_check.rs
