[package]
name = "neu-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.8.0"
actix-web = "4.3.1"
bcrypt = "0.14.0"
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
config = "0.13.3"
derive_more = "0.99.17"
env_logger = "0.10.0"
postgres = "0.19.5"
reqwest = "0.11.18"
serde = "1.0"
serde_derive = "1.0.163"
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-pg-mapper = "0.2.0"
tokio-postgres = "0.7.8"
tracing = { version = "0.1.37", features = ["log"] }
tracing-actix-web = "0.7.5"
uuid = { version = "0.8.1", features = ["v4"] }


[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[lib]
path = "src/lib.rs"

[[bin]]
name = "neu-backend"
path = "src/main.rs"

[features]
dev = []
prod = []
develop = []

