[package]
name = "neu-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.8.0"
actix-web = "4.3.1"
bcrypt = "0.14.0"
chrono = { version = "0.4.26", default-features = false, features = [
    "clock",
    "serde",
] }
config = "0.13.3"
derive_more = "0.99.17"
env_logger = "0.10.0"
postgres = "0.19.5"
reqwest = "0.11.18"
serde = "1.0"
serde-aux = "4.2.0"
serde_derive = "1.0.163"
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-actix-web = "0.7.5"
uuid = { version = "1", features = ["v4", "serde"] }
log = "0.4"
jsonwebtoken = "8.3.0"
unicode-segmentation = "1.10.1"
validator = "0.16.1"
fake = "2.6.1"
base64 = "0.21.2"
actix-session = { version = "0.7.2" }
actix-web-lab = "0.19.1"
hmac = "0.12.1"
sha2 = "0.10.7"
thiserror = "1.0.43"
anyhow = "1.0.71"
secrecy = { version = "0.8", features = ["serde"] }
urlencoding = "2.1.2"
actix-web-httpauth = "0.8.0"
# argonautica = "0.2.0"

actix-web-flash-messages = { version = "^0.4.2", features = ["cookies"] }
cron = "0.12.0"
sqlx = { version = "0.7.1", features = [
    "postgres",
    "sqlx-macros",
    "sqlx-postgres",
    "chrono",
    "uuid",
    "migrate",
    "tls-rustls",
    "runtime-tokio"
] }
[dev-dependencies]
dotenv = "0.15.0"
# sqlx = { version = "0.6.3", default-features = true, features = [
#     "runtime-actix-native-tls",
#     "macros",
#     "postgres",
#     "uuid",
#     "chrono",
#     "migrate",
#     "offline",
# ] }


[lib]
path = "src/lib.rs"

[[bin]]
name = "neu-backend"
path = "src/main.rs"

[features]
dev = []
prod = []
develop = []
